--- a/packages/l.toml
+++ b/packages/l.toml
@@ -658,3 +658,17 @@ stage = 20
 # Requires xorg-server to be built with shadow support enabled
 
 # For modesetting driver (built into xorg-server >= 1.18)
+
+[packages.libevent]
+version = "2.1.12"
+version_check = "github:libevent/libevent"
+description = "Event notification library"
+url = "https://github.com/libevent/libevent/releases/download/release-${version}-stable/libevent-${version}-stable.tar.gz"
+git_url = "https://github.com/libevent/libevent.git"
+use_git = false
+stage = 4
+build_order = 10
+source_dir = "libevent-${version}-stable"
+depends = ["openssl"]
+configure_flags = "--disable-static"
+provides = ["/usr/lib/libevent.so"]
