Add htop, tmux, pk packages and system config
New packages:
- htop 3.4.1 - interactive process viewer
- tmux 3.6a - terminal multiplexer
- libevent 2.1.12 - event notification library (tmux dep)
- pk 0.0.2 - package manager itself

System configuration (in pk package):
- /etc/profile.d/pk.sh - exports PK_ROOT="/"
- /etc/sudoers.d/pk - preserves PK_ROOT for sudo

--- a/packages/h.toml
+++ b/packages/h.toml
@@ -19,3 +19,16 @@ build_order = 3
 build_system = "meson"
 depends = ["cairo", "freetype", "glib"]
 meson_flags = "-Ddocs=disabled -Dintrospection=disabled -Dtests=disabled -Dcairo=enabled -Dfreetype=enabled -Dglib=enabled --wrap-mode=nodownload"
+
+[packages.htop]
+version = "3.4.1"
+version_check = "github:htop-dev/htop"
+description = "Interactive process viewer"
+url = "https://github.com/htop-dev/htop/releases/download/${version}/htop-${version}.tar.xz"
+git_url = "https://github.com/htop-dev/htop.git"
+use_git = false
+stage = 4
+build_order = 12
+depends = ["ncurses"]
+configure_flags = "--enable-unicode"
+provides = ["/usr/bin/htop"]
