Add man-db, groff, gdbm, libpipeline, micromamba; update cmake to 4.2.2
- man-db 2.13.1 with dependencies for man pages support
- groff 1.23.0 for man page rendering
- gdbm 1.26 for man-db database
- libpipeline 1.5.8 for man-db
- micromamba 2.5.0 for conda package management
- cmake 4.2.2 moved from stage 99 to stage 4

--- a/packages/g.toml
+++ b/packages/g.toml
@@ -388,4 +388,28 @@ git_url = ""
 use_git = false
 stage = 17
 
+[packages.groff]
+version = "1.23.0"
+version_check = "gnu:groff"
+description = "GNU troff text formatting system"
+url = "https://ftpmirror.gnu.org/gnu/groff/groff-${version}.tar.gz"
+git_url = "https://git.savannah.gnu.org/git/groff.git"
+use_git = false
+stage = 4
+build_order = 9
+configure_flags = "--with-doc=no"
+provides = ["/usr/bin/groff", "/usr/bin/troff"]
+
+[packages.gdbm]
+version = "1.26"
+version_check = "gnu:gdbm"
+description = "GNU database manager"
+url = "https://ftpmirror.gnu.org/gnu/gdbm/gdbm-${version}.tar.gz"
+git_url = "https://git.savannah.gnu.org/git/gdbm.git"
+use_git = false
+stage = 4
+build_order = 10
+configure_flags = "--disable-static --enable-libgdbm-compat"
+provides = ["/usr/lib/libgdbm.so"]
+
 # STAGE 18: Scientific Computing Languages
