--- a/packages/c.toml
+++ b/packages/c.toml
@@ -52,14 +52,14 @@ build_commands = [
 ]
 
 [packages.cmake]
-version = "3.28.6"
+version = "4.2.2"
 version_check = "github:Kitware/CMake"
 description = "Cross-platform build system generator"
 url = "https://github.com/Kitware/CMake/releases/download/v${version}/cmake-${version}.tar.gz"
 git_url = "https://github.com/Kitware/CMake.git"
 use_git = false
-# TODO: cmake has bootstrap issues with GCC 16, defer to later stage
-stage = 99
+stage = 4
+build_order = 6
 depends = ["openssl"]
 build_commands = [
     "./bootstrap --prefix=/usr --parallel=${NPROC} --system-zstd --system-zlib --system-bzip2",
