--- a/packages/w.toml
+++ b/packages/w.toml
@@ -57,3 +57,14 @@ git_url = "https://gitlab.winehq.org/wine/wine.git"
 use_git = false
 stage = 13
 # Note: Build both 64-bit and 32-bit (multilib)
+
+[packages.which]
+version = "2.21"
+version_check = "gnu:which"
+description = "Show full path of commands"
+url = "https://ftpmirror.gnu.org/gnu/which/which-${version}.tar.gz"
+git_url = "https://git.savannah.gnu.org/git/which.git"
+use_git = false
+stage = 4
+build_order = 13
+provides = ["/usr/bin/which"]
