GCC: LTO+PGO via BOOT_CFLAGS, OpenACC/nvptx support, LTO plugin
Major changes:
- GCC stage 3: Use BOOT_CFLAGS for LTO instead of external flags
  (external LTO breaks symbol versioning in libgcc)
- Add nvptx offload support with newlib and nvptx-tools
- Install LTO plugin symlink in /usr/lib/bfd-plugins/ for binutils
- Add skip_optimization to gcc-pass1, gcc-pass2, and gcc
- gcc-pass2: Enable LTO plugin for stage 3 builds

Build system:
- pk-build: Add skip_optimization field support
- Packages can set skip_optimization=true to use minimal flags

Package fixes:
- cmake: Switch back to upstream Kitware, add skip_optimization
- garcon, groff, gdbm: Disable LTO (libtool/linking issues)

--- a/packages/c.toml
+++ b/packages/c.toml
@@ -52,7 +52,7 @@ build_commands = [
 ]
 
 [packages.cmake]
-version = "4.2.2"
+version = "4.0.2"
 version_check = "github:Kitware/CMake"
 description = "Cross-platform build system generator"
 url = "https://github.com/Kitware/CMake/releases/download/v${version}/cmake-${version}.tar.gz"
@@ -61,8 +61,10 @@ use_git = false
 stage = 4
 build_order = 6
 depends = ["openssl"]
+# CMake bootstrap doesn't work well with aggressive LTO flags
+skip_optimization = true
 build_commands = [
-    "./bootstrap --prefix=/usr --parallel=${NPROC} --system-zstd --system-zlib --system-bzip2",
+    "./bootstrap --prefix=/usr --parallel=${NPROC} --system-zstd --system-zlib --system-bzip2 -- -DCMAKE_BUILD_TYPE=Release",
     "make -j${NPROC}",
     "make DESTDIR=${PKG} install"
 ]
