--- a/packages/e.toml
+++ b/packages/e.toml
@@ -96,9 +96,9 @@ build_commands = [
 provides = ["/usr/bin/expect"]
 
 [packages.expectrl-tcl]
-version = "0.1.0"
+version = "0.2.0"
 version_check = "github:krystophny/expectrl-tcl"
-description = "Tcl Expect extension in Rust (using expectrl)"
+description = "Tcl Expect extension in Rust (drop-in replacement using expectrl)"
 url = ""
 git_url = "https://github.com/krystophny/expectrl-tcl.git"
 use_git = true
@@ -106,10 +106,12 @@ stage = 10
 depends = ["tcl", "rust"]
 build_commands = [
     "cargo build --release",
+    "tclsh tests/run_all_tests.tcl",
     "install -Dm755 target/release/libexpectrl_tcl.so ${PKG}/usr/lib/tcl8.6/expectrl/libexpectrl_tcl.so",
+    "install -Dm755 scripts/expect ${PKG}/usr/bin/expect",
     "echo 'package ifneeded expect 1.0 [list load [file join $$dir libexpectrl_tcl.so]]' > ${PKG}/usr/lib/tcl8.6/expectrl/pkgIndex.tcl"
 ]
-provides = ["/usr/lib/tcl8.6/expectrl/libexpectrl_tcl.so"]
+provides = ["/usr/lib/tcl8.6/expectrl/libexpectrl_tcl.so", "/usr/bin/expect"]
 
 [packages.exo]
 version = "4.20.0"
@@ -119,3 +121,9 @@ url = "https://archive.xfce.org/src/xfce/exo/4.20/exo-${version}.tar.bz2"
 git_url = "https://gitlab.xfce.org/xfce/exo.git"
 use_git = false
 stage = 10
+# Disable LTO - libtool nm issues
+build_commands = [
+    "unset CFLAGS CXXFLAGS LDFLAGS && ./configure --prefix=/usr CFLAGS='-O2 -march=znver3' LDFLAGS=''",
+    "unset CFLAGS CXXFLAGS LDFLAGS && make -j${NPROC} CFLAGS='-O2 -march=znver3' LDFLAGS=''",
+    "make DESTDIR=${PKG} install"
+]
