Update cmake 4.2.2 with LTO, fix GCC gthreads header
cmake:
- Update to 4.2.2 (latest)
- Enable full LTO optimization with gcc-ar/gcc-ranlib/gcc-nm
- Disable tests (incompatible with LTO)
- Force C++17 standard

gcc:
- Fix c++config.h installation: copy platform-specific version to
  generic location to enable threading support (_GLIBCXX_HAS_GTHREADS)

--- a/packages/c.toml
+++ b/packages/c.toml
@@ -52,7 +52,7 @@ build_commands = [
 ]
 
 [packages.cmake]
-version = "4.0.2"
+version = "4.2.2"
 version_check = "github:Kitware/CMake"
 description = "Cross-platform build system generator"
 url = "https://github.com/Kitware/CMake/releases/download/v${version}/cmake-${version}.tar.gz"
@@ -61,11 +61,9 @@ use_git = false
 stage = 4
 build_order = 6
 depends = ["openssl"]
-# CMake bootstrap doesn't work well with aggressive LTO flags
-skip_optimization = true
 build_commands = [
-    "./bootstrap --prefix=/usr --parallel=${NPROC} --system-zstd --system-zlib --system-bzip2 -- -DCMAKE_BUILD_TYPE=Release",
-    "make -j${NPROC}",
+    "AR='gcc-ar' RANLIB='gcc-ranlib' NM='gcc-nm' ./bootstrap --prefix=/usr --parallel=${NPROC} --system-zstd --system-zlib --system-bzip2 -- -DCMAKE_BUILD_TYPE=Release -DCMAKE_AR=/usr/bin/gcc-ar -DCMAKE_RANLIB=/usr/bin/gcc-ranlib -DCMAKE_NM=/usr/bin/gcc-nm -DBUILD_TESTING=OFF -DCMAKE_CXX_STANDARD=17",
+    "make -j${NPROC} AR='gcc-ar' RANLIB='gcc-ranlib' NM='gcc-nm'",
     "make DESTDIR=${PKG} install"
 ]
 
