Remove --wrap-mode=nodownload from meson packages
Let meson download missing subprojects/dependencies automatically.
This is more pragmatic than manually tracking every transitive dependency.

--- a/packages/p.toml
+++ b/packages/p.toml
@@ -156,7 +156,7 @@ stage = 9
 build_order = 4
 build_system = "meson"
 depends = ["harfbuzz", "cairo", "fribidi", "fontconfig"]
-meson_flags = "-Dintrospection=disabled -Ddocumentation=false --wrap-mode=nodownload"
+meson_flags = "-Dintrospection=disabled -Ddocumentation=false"
 provides = ["/usr/lib/libpango-1.0.so"]
 
 [packages.polkit]
