Add missing X11 base packages and fix dependencies
Added:
- util-macros (xorg-macros.pc)
- libXau (X authorization)
- xtrans (X transport)

Fixed depends:
- libxcb: added libXau, libXdmcp, xcb-proto, util-macros
- libX11: added libxcb, libXau, xtrans, util-macros, xorgproto
- libepoxy: added mesa, libX11

--- a/packages/l.toml
+++ b/packages/l.toml
@@ -209,6 +209,24 @@ git_url = "https://github.com/thom311/libnl.git"
 use_git = false
 stage = 7
 
+[packages.libXau]
+version = "1.0.12"
+version_check = "xorg:lib/libXau"
+description = "X11 authorization protocol library"
+url = "https://www.x.org/releases/individual/lib/libXau-${version}.tar.xz"
+stage = 7
+build_system = "autotools"
+depends = ["xorgproto", "util-macros"]
+
+[packages.xtrans]
+version = "1.5.2"
+version_check = "xorg:lib/libxtrans"
+description = "X11 transport library"
+url = "https://www.x.org/releases/individual/lib/xtrans-${version}.tar.xz"
+stage = 7
+build_system = "autotools"
+depends = ["util-macros"]
+
 [packages.libX11]
 version = "1.8.12"
 version_check = "xorg:lib/libX11"
@@ -217,6 +235,7 @@ url = "https://www.x.org/releases/individual/lib/libX11-${version}.tar.xz"
 git_url = "https://gitlab.freedesktop.org/xorg/lib/libx11.git"
 use_git = false
 stage = 8
+depends = ["libxcb", "libXau", "xtrans", "util-macros", "xorgproto"]
 
 [packages.libXft]
 version = "2.3.9"
@@ -316,6 +335,7 @@ url = "https://xorg.freedesktop.org/archive/individual/lib/libxcb-${version}.tar
 git_url = "https://gitlab.freedesktop.org/xorg/lib/libxcb.git"
 use_git = false
 stage = 8
+depends = ["libXau", "libXdmcp", "xcb-proto", "util-macros"]
 
 [packages.libpng]
 version = "1.6.54"
@@ -375,6 +395,7 @@ git_url = "https://github.com/anholt/libepoxy.git"
 use_git = false
 stage = 8
 build_system = "meson"
+depends = ["mesa", "libX11"]
 
 [packages.libinput]
 version = "1.27.1"
