--- a/packages/u.toml
+++ b/packages/u.toml
@@ -1,3 +1,12 @@
+[packages.util-macros]
+version = "1.20.2"
+version_check = "xorg:util/macros"
+description = "X.Org utility macros"
+url = "https://www.x.org/releases/individual/util/util-macros-${version}.tar.xz"
+stage = 7
+build_system = "autotools"
+provides = ["/usr/share/pkgconfig/xorg-macros.pc"]
+
 [packages.util-linux]
 version = "2.40.2"
 version_check = "github:util-linux/util-linux"
