--- a/packages/g.toml
+++ b/packages/g.toml
@@ -279,7 +279,7 @@ stage = 9
 build_order = 6
 build_system = "meson"
 depends = ["shared-mime-info", "libjpeg-turbo", "libpng"]
-meson_flags = "-Dman=false -Dgtk_doc=false -Dintrospection=disabled -Dinstalled_tests=false --wrap-mode=nodownload"
+meson_flags = "-Dman=false -Dgtk_doc=false -Dintrospection=disabled -Dinstalled_tests=false -Dtests=false --wrap-mode=nodownload"
 provides = ["/usr/lib/libgdk_pixbuf-2.0.so"]
 
 [packages.gtk3]
