Add post-install hooks and fix package dependencies
- pk-install: Add automatic cache regeneration hooks
  - MIME database (update-mime-database)
  - gdk-pixbuf loaders (gdk-pixbuf-query-loaders)
  - GIO modules (gio-querymodules)
  - Icon cache (gtk-update-icon-cache)
  - Desktop database (update-desktop-database)
  - Font cache (fc-cache)
  - GLib schemas (glib-compile-schemas)
  - GTK3 input modules

- packages/a.toml: Fix at-spi2-core meson flags (disabled not no)
- packages/c.toml: Add X11 deps to cairo, enable xlib/xcb
- packages/l.toml: Add libXtst package for at-spi2-core
- packages/g.toml: Fix gdk-pixbuf depends on image libraries

Fixes PNG loading in gdk-pixbuf by ensuring MIME database is
regenerated on shared-mime-info install.

--- a/packages/a.toml
+++ b/packages/a.toml
@@ -57,7 +57,18 @@ use_git = false
 stage = 9
 build_order = 5
 build_system = "meson"
-meson_flags = "-Dintrospection=false"
+meson_flags = "-Dintrospection=disabled"
+
+[packages.at-spi2-core]
+version = "2.54.0"
+version_check = "gnome:at-spi2-core"
+description = "Accessibility infrastructure"
+url = "https://download.gnome.org/sources/at-spi2-core/2.54/at-spi2-core-${version}.tar.xz"
+stage = 9
+build_order = 5
+build_system = "meson"
+depends = ["dbus", "glib", "libX11", "libXi", "libXtst"]
+meson_flags = "-Dintrospection=disabled -Dx11=enabled -Dsystemd_user_dir=/tmp --wrap-mode=nodownload"
 
 [packages.alsa-lib]
 version = "1.2.15"
