--- a/packages/l.toml
+++ b/packages/l.toml
@@ -91,6 +91,22 @@ build_commands = [
     "make prefix=/usr lib=lib DESTDIR=${PKG} install"
 ]
 
+[packages.libarchive]
+version = "3.7.7"
+version_check = "github:libarchive/libarchive"
+description = "Multi-format archive and compression library"
+url = "https://github.com/libarchive/libarchive/releases/download/v${version}/libarchive-${version}.tar.xz"
+stage = 4
+build_order = 15
+depends = ["zlib", "xz", "zstd", "openssl"]
+# Use autotools - CMake 4.x compatibility issues
+build_commands = [
+    "autoreconf -fi",
+    "./configure --prefix=/usr --disable-static",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+
 [packages.libtirpc]
 version = "1.3.6"
 version_check = "sourceforge:libtirpc"
@@ -138,16 +154,29 @@ stage = 4
 build_order = 5
 
 [packages.libxml2]
-version = "2.13.6"
+version = "2.15.1"
 version_check = "gnome:libxml2"
 description = "XML parsing library"
-url = "https://download.gnome.org/sources/libxml2/2.13/libxml2-${version}.tar.xz"
+url = "https://download.gnome.org/sources/libxml2/2.15/libxml2-${version}.tar.xz"
 git_url = "https://gitlab.gnome.org/GNOME/libxml2.git"
 use_git = false
 stage = 4
 build_order = 8
 configure_flags = "--without-python --with-history"
 provides = ["/usr/lib/libxml2.so", "/usr/bin/xmllint"]
+
+[packages.libxslt]
+version = "1.1.45"
+version_check = "gnome:libxslt"
+description = "XSLT processing library"
+url = "https://download.gnome.org/sources/libxslt/1.1/libxslt-${version}.tar.xz"
+git_url = "https://gitlab.gnome.org/GNOME/libxslt.git"
+use_git = false
+stage = 4
+build_system = "autotools"
+depends = ["libxml2"]
+configure_flags = "--without-python"
+provides = ["/usr/bin/xsltproc", "/usr/lib/libxslt.so"]
 
 [packages.libtool]
 version = "2.5.4"
@@ -199,6 +228,20 @@ build_commands = [
     "rm -rf ${PKG}/lib/firmware/.git"
 ]
 provides = ["/lib/firmware/regulatory.db"]
+
+[packages.lz4]
+version = "1.10.0"
+version_check = "github:lz4/lz4"
+description = "Extremely fast compression algorithm"
+url = "https://github.com/lz4/lz4/releases/download/v${version}/lz4-${version}.tar.gz"
+git_url = "https://github.com/lz4/lz4.git"
+use_git = false
+stage = 4
+build_commands = [
+    "make -j${NPROC} PREFIX=/usr",
+    "make PREFIX=/usr DESTDIR=${PKG} install"
+]
+provides = ["/usr/lib/liblz4.so"]
 
 [packages.libnl]
 version = "3.11.0"
@@ -254,6 +297,15 @@ url = "https://www.x.org/releases/individual/lib/libXrender-${version}.tar.xz"
 git_url = "https://gitlab.freedesktop.org/xorg/lib/libxrender.git"
 use_git = false
 stage = 8
+
+[packages.libXres]
+version = "1.2.2"
+version_check = "xorg:lib/libXres"
+description = "X Resource extension library"
+url = "https://www.x.org/releases/individual/lib/libXres-${version}.tar.xz"
+stage = 8
+build_system = "autotools"
+depends = ["libX11", "libXext"]
 
 [packages.libXrandr]
 version = "1.5.4"
@@ -366,6 +418,24 @@ git_url = "https://gitlab.freedesktop.org/mesa/drm.git"
 use_git = false
 stage = 8
 build_system = "meson"
+
+[packages.libdisplay-info]
+version = "0.2.0"
+version_check = "freedesktop:emersion/libdisplay-info"
+description = "EDID and DisplayID parsing library"
+url = "https://gitlab.freedesktop.org/emersion/libdisplay-info/-/releases/0.2.0/downloads/libdisplay-info-0.2.0.tar.xz"
+stage = 8
+build_system = "meson"
+
+[packages.libwnck]
+version = "43.1"
+version_check = "gnome:libwnck"
+description = "Window Navigator Construction Kit"
+url = "https://download.gnome.org/sources/libwnck/43/libwnck-${version}.tar.xz"
+stage = 8
+build_system = "meson"
+depends = ["gtk3", "libX11", "libXres"]
+meson_flags = "-Dgtk_doc=false -Dintrospection=disabled"
 
 [packages.libXdmcp]
 version = "1.1.5"
