Add missing X11 libs and fix mesa/xorg builds
- Add glslang 16.2.0 for mesa
- Add libXxf86vm 1.1.6 for mesa
- Fix mesa: use softpipe driver (swrast deprecated, needs LLVM)
- Fix xorg-server: skip optimization and use -Wno-error for GCC 16
  array-bounds warnings

--- a/packages/x.toml
+++ b/packages/x.toml
@@ -24,6 +24,12 @@ url = "https://www.x.org/releases/individual/xserver/xorg-server-${version}.tar.
 git_url = "https://gitlab.freedesktop.org/xorg/xserver.git"
 use_git = false
 stage = 8
+skip_optimization = true
+build_commands = [
+    "./configure --prefix=/usr --localstatedir=/var --sysconfdir=/etc --enable-glamor --enable-suid-wrapper --enable-xorg --disable-docs --disable-devel-docs CFLAGS='-O2 -march=znver3 -Wno-error'",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
 
 [packages.xorgproto]
 version = "2025.1"
