--- a/packages/g.toml
+++ b/packages/g.toml
@@ -251,6 +251,18 @@ build_commands = [
 ]
 provides = ["/usr/lib/libgmp.so"]
 
+[packages.glslang]
+version = "16.2.0"
+version_check = "github:KhronosGroup/glslang"
+description = "Khronos GLSL/SPIR-V compiler"
+url = "https://github.com/KhronosGroup/glslang/archive/refs/tags/${version}.tar.gz"
+git_url = "https://github.com/KhronosGroup/glslang.git"
+use_git = false
+stage = 8
+build_system = "cmake"
+cmake_flags = "-DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DENABLE_OPT=OFF"
+provides = ["/usr/bin/glslangValidator"]
+
 [packages.glib]
 version = "2.84.0"
 version_check = "gnome:glib"
