--- a/packages/l.toml
+++ b/packages/l.toml
@@ -477,6 +477,8 @@ git_url = "https://gitlab.freedesktop.org/libinput/libinput.git"
 use_git = false
 stage = 8
 build_system = "meson"
+meson_flags = "-Dlibwacom=false -Ddocumentation=false -Dtests=false -Ddebug-gui=false"
+depends = ["libevdev", "mtdev"]
 
 [packages.libevdev]
 version = "1.13.6"
@@ -578,6 +580,16 @@ url = "https://www.x.org/releases/individual/lib/libXtst-${version}.tar.xz"
 stage = 8
 build_system = "autotools"
 depends = ["libX11", "libXext", "libXi"]
+
+[packages.libXxf86vm]
+version = "1.1.6"
+version_check = "xorg:lib/libXxf86vm"
+description = "XFree86 VidMode extension library"
+url = "https://www.x.org/releases/individual/lib/libXxf86vm-${version}.tar.xz"
+git_url = "https://gitlab.freedesktop.org/xorg/lib/libxxf86vm.git"
+use_git = false
+stage = 8
+depends = ["libX11", "libXext", "xorgproto"]
 
 [packages.libXmu]
 version = "1.2.1"
